<resources>
    <string name="app_name">Eventr</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="tab_text_1">Your Events</string>
    <string name="tab_text_2">Calendar</string>
    <string name="tab_text_3">Find/Nearby</string>
    <string name="signup">Signup</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="google_signIn_button">Sign in with your Google Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_placeholder">Title</string>
    <string name="subtitle_placeholder">SubTitle</string>
    <string name="event_info_placeholder">Here is an event.</string>
    <string name="empty_screen">You have no events right now.</string>
    <string name="btn_retry">Reload</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="info">Info</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="event_public">Make this event public?</string>
    <string name="create_event">Create Event</string>
    <string name="edit_event">Edit Event</string>

    <string-array name="event_titles">
        <item>Barbecue</item>
        <item>Birthday</item>
        <item>Party</item>
        <item>Bowling</item>
        <item>Basketball</item>
        <item>Golf</item>
    </string-array>

    <string-array name="event_subtitles">
        <item>Best griller in town baby</item>
        <item>One more year closer to dead</item>
        <item>I want to get destroyed</item>
        <item>Bowl me</item>
        <item>Ball me</item>
        <item>Golf.</item>
    </string-array>

    <string-array name="event_info">
        <item>Bring some sauce pls</item>
        <item>I only want money as gifts</item>
        <item>BYOB you mongrels</item>
        <item>I dont even like to bowl</item>
        <item>NBA more like free Hong Kong</item>
        <item>ZZZzzzzzzzz…</item>
    </string-array>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
</resources>
