<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEventActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8dp"
        android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:padding="@dimen/appbar_padding"
        android:text="@string/create_event"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:fontFamily="@font/raleway_semibold" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Title Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subtitle Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/subtitle_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Date Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Time Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <!-- Street Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/street_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- City Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- State Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/state_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Zipcode Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/zipcode_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <!-- Info Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/TextInputLayoutAppearance">

        <EditText
            android:id="@+id/info_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/public_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_public" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_event_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/create_event"
        android:layout_marginTop="@dimen/_8dp"/>

</LinearLayout>