<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEventActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8dp"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/edit_event"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:fontFamily="@font/raleway_semibold" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Title Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subtitle Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/edit_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Info Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/TextInputLayoutAppearance">

        <EditText
            android:id="@+id/edit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/public_check_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_public" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_event_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/edit_event"
        android:layout_marginTop="@dimen/_8dp"/>

</LinearLayout>