<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_margin="@dimen/card_view_margin"
        android:padding="@dimen/card_view_margin"
        card_view:cardCornerRadius="@dimen/card_radius">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginBottom="8dp"
                android:padding="@dimen/_8dp"
                android:text="@string/title_placeholder" />

            <TextView
                android:id="@+id/subTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/_8dp"
                android:padding="@dimen/_8dp"
                android:text="@string/subtitle_placeholder"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventInfo"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subTitle"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:padding="@dimen/_8dp"
                android:text="@string/event_info_placeholder" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>